Replace custom assertions with standard assert.h calls
git-svn-id: svn://svn.code.sf.net/p/libsmacker/code/trunk@36 c21c5e83-d187-48ce-856a-d956d2b7ecab

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,7 @@
 ACLOCAL_AMFLAGS = -I m4
 
+AM_CPPFLAGS = -Wall -Wextra
+
 lib_LTLIBRARIES = libsmacker.la
 libsmacker_la_SOURCES = smacker.c \
 			smk_bitstream.c \
