Split 8- and 16-bit hufftrees.  Replace 8-bit dynamic tree with array.
git-svn-id: svn://svn.code.sf.net/p/libsmacker/code/trunk@38 c21c5e83-d187-48ce-856a-d956d2b7ecab

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,8 @@ AM_CPPFLAGS = -Wall -Wextra
 lib_LTLIBRARIES = libsmacker.la
 libsmacker_la_SOURCES = smacker.c \
 			smk_bitstream.c \
-			smk_hufftree.c
+			smk_huff8.c \
+			smk_huff16.c
 libsmacker_la_LDFLAGS = -version-info 1:1:1
 
 noinst_PROGRAMS = driver smk2avi
