Fix two decoding bugs in r39
git-svn-id: svn://svn.code.sf.net/p/libsmacker/code/trunk@40 c21c5e83-d187-48ce-856a-d956d2b7ecab

--- a/configure.ac
+++ b/configure.ac
@@ -5,6 +5,8 @@ AC_CONFIG_MACRO_DIRS([m4])
 AM_INIT_AUTOMAKE([foreign])
 
 AC_PROG_CC
+AC_HEADER_ASSERT
+
 AC_PROG_LIBTOOL
 
 AC_CONFIG_FILES([Makefile])
